resources/tests/files/ok/ImportFunctionInterface.krna


fn f(a: fn(string) -> string impl java::util::function::Function<string, string>) {}